# playsmith

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  WHY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: playsmith.docker.yaml  playsmith.example.yaml
docs/: ARCHITECTURE.md  BUILD_PLANS.md  BUILD_PLAN_PHASE1.md  BUILD_PLAN_PHASE2.md  BUILD_PLAN_PHASE3.md  CONTRIBUTING_SKILLS.md  DOCKER.md  ENHANCEMENT_PLAN.md  LAUNCH.md  NEXTGEN_ROADMAP.md  QUICKSTART.md  ROADMAP.md  SKILL_SPEC.md  WEB_REDESIGN_BRIEF.md
examples/assetpacks/: README.md  frozen.json
playsmith/: __init__.py  config.py  studio.py
playsmith-games/a-2d-platformer-where-a-cat/: Main.tscn  Player.tscn  _playsmith_screenshot.gd  _playsmith_screenshot.tscn  _playsmith_verify.gd  _playsmith_verify.tscn  project.godot
playsmith/agent/: __init__.py  approval.py  loop.py  tools.py
scripts/: build_skillpack.py
tests/: conftest.py  test_agent_loop.py  test_assetpacks.py  test_assets.py  test_assets_comfyui.py  test_assets_mesh.py  test_assets_openai.py  test_catalog.py  test_cli.py  test_compliance.py  test_config.py  test_critic.py  test_director.py  test_edit.py  test_eval.py  test_genres.py  test_godot_adapter.py  test_imagegen.py  test_llm_gateway.py  test_llm_router.py  test_mobile.py  test_publish.py  test_refine.py  test_registry.py  test_remote_control.py  test_render.py  test_skills.py  test_smoke.py  test_steam.py  test_studio.py  test_template_clone.py  test_unreal.py  test_vision.py  test_web.py
(+71 files in other folders)
