[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playsmith"
version = "0.0.1"
description = "Open-source, local-first vibe-coding studio: a prompt becomes a real, editable, shippable game in a real engine."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Raihan", email = "bracketi2023@gmail.com" }]
maintainers = [{ name = "Raihan (@raihan-js)" }]
keywords = ["gamedev", "unreal", "unreal-engine", "llm", "local-first", "agent", "ai"]
urls.Homepage = "https://github.com/raihan-js/playsmith"
urls.Repository = "https://github.com/raihan-js/playsmith"
urls.Issues = "https://github.com/raihan-js/playsmith/issues"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
playsmith = "playsmith.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["playsmith"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
